[gd_scene load_steps=21 format=3 uid="uid://battlefield001"]

[ext_resource type="Script" path="res://scripts/battle/battlefield.gd" id="1_battlefield"]
[ext_resource type="Script" path="res://scripts/battle/tower.gd" id="2_tower"]
[ext_resource type="Script" path="res://scripts/battle/castle.gd" id="3_castle"]
[ext_resource type="PackedScene" uid="uid://battle_ui_001" path="res://scenes/ui/battle_ui.tscn" id="4_battle_ui"]
[ext_resource type="Texture2D" path="res://assets/sprites/buildings/tower_player.png" id="5_tower_player"]
[ext_resource type="Texture2D" path="res://assets/sprites/buildings/tower_enemy.png" id="6_tower_enemy"]
[ext_resource type="Texture2D" path="res://assets/sprites/buildings/castle_player.png" id="7_castle_player"]
[ext_resource type="Texture2D" path="res://assets/sprites/buildings/castle_enemy.png" id="8_castle_enemy"]
[ext_resource type="Texture2D" path="res://assets/sprites/ui/health_bar_fill.png" id="9_health_bar"]
[ext_resource type="Texture2D" path="res://assets/sprites/battlefield/grass_texture.png" id="10_grass"]
[ext_resource type="Texture2D" path="res://assets/sprites/battlefield/river_texture.png" id="11_river"]
[ext_resource type="Texture2D" path="res://assets/sprites/battlefield/bridge_left.png" id="12_bridge_left"]
[ext_resource type="Texture2D" path="res://assets/sprites/battlefield/bridge_right.png" id="13_bridge_right"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_health_fill"]
texture = ExtResource("9_health_bar")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tower_range"]
radius = 480.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tower_collision"]
size = Vector2(64, 96)

[sub_resource type="CircleShape2D" id="CircleShape2D_castle_range"]
radius = 448.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_castle_collision"]
size = Vector2(96, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_river_left"]
size = Vector2(188, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_river_center"]
size = Vector2(376, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_river_right"]
size = Vector2(188, 200)

[node name="Battlefield" type="Node2D"]
script = ExtResource("1_battlefield")

[node name="Background" type="Node2D" parent="."]
z_index = -10

[node name="GrassSprite" type="Sprite2D" parent="Background"]
texture_repeat = 2
position = Vector2(576, 896)
texture = ExtResource("10_grass")
region_enabled = true
region_rect = Rect2(0, 0, 1152, 1792)

[node name="GridVisual" type="Node2D" parent="."]
z_index = -5

[node name="DeploymentZones" type="Node2D" parent="."]
z_index = -4

[node name="River" type="Node2D" parent="."]
z_index = -3

[node name="RiverSprite" type="Sprite2D" parent="River"]
texture_repeat = 2
position = Vector2(576, 896)
texture = ExtResource("11_river")
region_enabled = true
region_rect = Rect2(0, 0, 1152, 128)

[node name="BridgeLeft" type="Sprite2D" parent="River"]
position = Vector2(288, 896)
texture = ExtResource("12_bridge_left")
scale = Vector2(0.25, 0.25)

[node name="BridgeRight" type="Sprite2D" parent="River"]
position = Vector2(864, 896)
texture = ExtResource("13_bridge_right")
scale = Vector2(0.25, 0.25)

[node name="RiverCollisionLeft" type="StaticBody2D" parent="River"]
position = Vector2(94, 896)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="River/RiverCollisionLeft"]
shape = SubResource("RectangleShape2D_river_left")

[node name="RiverCollisionCenter" type="StaticBody2D" parent="River"]
position = Vector2(576, 896)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="River/RiverCollisionCenter"]
shape = SubResource("RectangleShape2D_river_center")

[node name="RiverCollisionRight" type="StaticBody2D" parent="River"]
position = Vector2(1058, 896)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="River/RiverCollisionRight"]
shape = SubResource("RectangleShape2D_river_right")

[node name="Towers" type="Node2D" parent="."]
z_index = 0

[node name="PlayerLeftTower" type="Area2D" parent="Towers"]
collision_layer = 4
collision_mask = 2
script = ExtResource("2_tower")

[node name="Sprite2D" type="Sprite2D" parent="Towers/PlayerLeftTower"]
texture = ExtResource("5_tower_player")
scale = Vector2(0.135, 0.135)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towers/PlayerLeftTower"]
shape = SubResource("RectangleShape2D_tower_collision")

[node name="RangeArea" type="Area2D" parent="Towers/PlayerLeftTower"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towers/PlayerLeftTower/RangeArea"]
shape = SubResource("CircleShape2D_tower_range")
modulate = Color(1, 1, 1, 0.1)

[node name="HealthBar" type="ProgressBar" parent="Towers/PlayerLeftTower"]
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = -50.0
show_percentage = false

[node name="AttackTimer" type="Timer" parent="Towers/PlayerLeftTower"]
wait_time = 1.25
one_shot = false

[node name="PlayerRightTower" type="Area2D" parent="Towers"]
collision_layer = 4
collision_mask = 2
script = ExtResource("2_tower")

[node name="Sprite2D" type="Sprite2D" parent="Towers/PlayerRightTower"]
texture = ExtResource("5_tower_player")
scale = Vector2(0.135, 0.135)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towers/PlayerRightTower"]
shape = SubResource("RectangleShape2D_tower_collision")

[node name="RangeArea" type="Area2D" parent="Towers/PlayerRightTower"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towers/PlayerRightTower/RangeArea"]
shape = SubResource("CircleShape2D_tower_range")
modulate = Color(1, 1, 1, 0.1)

[node name="HealthBar" type="ProgressBar" parent="Towers/PlayerRightTower"]
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = -50.0
show_percentage = false

[node name="AttackTimer" type="Timer" parent="Towers/PlayerRightTower"]
wait_time = 1.25
one_shot = false

[node name="PlayerCastle" type="Area2D" parent="Towers"]
collision_layer = 4
collision_mask = 2
script = ExtResource("3_castle")

[node name="Sprite2D" type="Sprite2D" parent="Towers/PlayerCastle"]
texture = ExtResource("7_castle_player")
scale = Vector2(0.18, 0.18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towers/PlayerCastle"]
shape = SubResource("RectangleShape2D_castle_collision")

[node name="RangeArea" type="Area2D" parent="Towers/PlayerCastle"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towers/PlayerCastle/RangeArea"]
shape = SubResource("CircleShape2D_castle_range")
modulate = Color(1, 1, 1, 0.1)

[node name="HealthBar" type="ProgressBar" parent="Towers/PlayerCastle"]
offset_left = -50.0
offset_top = -70.0
offset_right = 50.0
offset_bottom = -60.0
show_percentage = false

[node name="AttackTimer" type="Timer" parent="Towers/PlayerCastle"]
wait_time = 1.0
one_shot = false

[node name="OpponentLeftTower" type="Area2D" parent="Towers"]
collision_layer = 4
collision_mask = 1
script = ExtResource("2_tower")

[node name="Sprite2D" type="Sprite2D" parent="Towers/OpponentLeftTower"]
texture = ExtResource("6_tower_enemy")
scale = Vector2(0.135, 0.135)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towers/OpponentLeftTower"]
shape = SubResource("RectangleShape2D_tower_collision")

[node name="RangeArea" type="Area2D" parent="Towers/OpponentLeftTower"]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towers/OpponentLeftTower/RangeArea"]
shape = SubResource("CircleShape2D_tower_range")
modulate = Color(1, 1, 1, 0.1)

[node name="HealthBar" type="ProgressBar" parent="Towers/OpponentLeftTower"]
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = -50.0
show_percentage = false

[node name="AttackTimer" type="Timer" parent="Towers/OpponentLeftTower"]
wait_time = 1.25
one_shot = false

[node name="OpponentRightTower" type="Area2D" parent="Towers"]
collision_layer = 4
collision_mask = 1
script = ExtResource("2_tower")

[node name="Sprite2D" type="Sprite2D" parent="Towers/OpponentRightTower"]
texture = ExtResource("6_tower_enemy")
scale = Vector2(0.135, 0.135)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towers/OpponentRightTower"]
shape = SubResource("RectangleShape2D_tower_collision")

[node name="RangeArea" type="Area2D" parent="Towers/OpponentRightTower"]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towers/OpponentRightTower/RangeArea"]
shape = SubResource("CircleShape2D_tower_range")
modulate = Color(1, 1, 1, 0.1)

[node name="HealthBar" type="ProgressBar" parent="Towers/OpponentRightTower"]
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = -50.0
show_percentage = false

[node name="AttackTimer" type="Timer" parent="Towers/OpponentRightTower"]
wait_time = 1.25
one_shot = false

[node name="OpponentCastle" type="Area2D" parent="Towers"]
collision_layer = 4
collision_mask = 1
script = ExtResource("3_castle")

[node name="Sprite2D" type="Sprite2D" parent="Towers/OpponentCastle"]
texture = ExtResource("8_castle_enemy")
scale = Vector2(0.18, 0.18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towers/OpponentCastle"]
shape = SubResource("RectangleShape2D_castle_collision")

[node name="RangeArea" type="Area2D" parent="Towers/OpponentCastle"]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towers/OpponentCastle/RangeArea"]
shape = SubResource("CircleShape2D_castle_range")
modulate = Color(1, 1, 1, 0.1)

[node name="HealthBar" type="ProgressBar" parent="Towers/OpponentCastle"]
offset_left = -50.0
offset_top = -70.0
offset_right = 50.0
offset_bottom = -60.0
show_percentage = false

[node name="AttackTimer" type="Timer" parent="Towers/OpponentCastle"]
wait_time = 1.0
one_shot = false

[node name="Units" type="Node2D" parent="."]
z_index = 1

[node name="Projectiles" type="Node2D" parent="."]
z_index = 2

[node name="Effects" type="Node2D" parent="."]
z_index = 3

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 1024)

[node name="UI" type="CanvasLayer" parent="."]
layer = 1

[node name="BattleUI" parent="UI" instance=ExtResource("4_battle_ui")]